# image_segmentation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: docker.yaml  tests.yaml
conf/: README.md  default.yaml
conf/hydra/: default.yaml
conf/nn/: default.yaml
conf/train/: default.yaml
docker/: Dockerfile.image_segmentation
docs/source/: conf.py  image_segmentation.common.rst  image_segmentation.data.rst  image_segmentation.models.rst  image_segmentation.models.tf_unet.rst  image_segmentation.rst  index.rst  modules.rst
notebook/: data_preprocessing.ipynb
scripts/: prepare_working_env.sh
src/image_segmentation/: main.py
src/image_segmentation/common/: __init__.py  utils.py
src/image_segmentation/data/: datamodule.py  utils.py
src/image_segmentation/models/: models.py
src/image_segmentation/models/tf_unet/: unet.py  unet_block.py  utils.py
tensorboard/: README.md
test/: test_install.py
