[metadata]
name = image_segmentation
description = Make code great again - Preligens technical test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuillaumeBarree/image_segmentation
author = Guillaume Barree
author_email = guillaume.barree@student-cs.fr
license = MIT
license_file = LICENSE
license_files = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages =
    image_segmentation
install_requires =
    tensorflow>=2.10
python_requires = >=3.6
package_dir =
    =src
zip_safe = no
