[metadata]
name = image_segmentation
description = Make code great again - Preligens technical test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GuillaumeBarree/image_segmentation
author = Guillaume Barree
author_email = guillaume.barree@student-cs.fr
license = MIT
license_file = LICENSE
platforms = any
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Topic :: Scientific/Engineering

[options]
packages =
    image_segmentation
install_requires =
    tensorflow>=2.10
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=5.0
    mypy>=0.971
    pytest>=7.1
    pytest-cov>=3.0
    tox>=3.26

[options.package_data]
slapping = py.typed

[flake8]
max-line-length = 160
